Ajout d'un fichier audio pour une immersion 200% plus intense

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div>
                 <p>Une version google traduite de Deltarune. En partie inspirée par Funky Fantasy. Plutôt recommandé aux personnes ayant déjà fait le jeu qui veulent rire un bon coup.</p>
                 <p>Avant qu'on pose la question, UnderTale -&gt; DeltaRune -&gt; NudeAlert, donc Alerte Nue.</p>
-                <p>Installation : Il suffit de DL le zip, extraire le lang_en.json et remplacer l'original situé dans le dossier lang du jeu (Probablement dans les program_files)</p>
+                <p>Installation : Il suffit de DL le zip, extraire le lang_en.json et remplacer l'original situé dans le dossier lang du jeu (Probablement dans les program_files). Vous pouvez également remplacer le AUDIO_INTRONOISE.ogg pour une immersion 200% plus intense.</p>
                 <p><a href="./files/ALERTE_NUE.zip">Téléchargement</a></p>
                 <p class="bottom-text">Projet fait pour le fun sur une soirée avec&nbsp;<a href="https://pypi.org/project/googletrans/">googletrans</a>. Beaucoup de texte est mal aligné, certaines lignes ont une chance de soft-lock le jeu (même si normalement c'est réglé) et il manque les accents et les sprites mais considérez ça comme faisant partie de l'expérience ?? Je compte pas vraiment revenir dessus, vous pouvez faire à peu près ce que vous voulez du json sans nécessairement me mentionner.</p>
             </div>
